# hashbench

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  download.sh
.perf/: perf.sh
.zed/: settings.json
src/: hash_function.hpp  hash_table.hpp  main.cpp  utils.cpp  utils.hpp
